--- a/src/index.pug
+++ b/src/index.pug
@@ -1,13 +1,13 @@
 extend _component/layout/base
 block config
     -
-        var title = "!Welcome to Quick Blog"
+        var title = "Welcome to Quick Blog"
         var description = "Using super Quick Blog is easy and you can get 100/100 score on Google pagespeed insights"
 block content
     .welcome
         h1=title
-        p=description
-        a(href="#continue") click to continue reading or scroll down
+        p.welcome__description=description
+        a.scroll-down(href="#continue") click to continue reading or scroll down
     #continue
     p.lead Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, dolor! Quam dolorem beatae voluptates sequi sint modi corporis? Similique dicta quod accusamus sint distinctio at cum quisquam officia veniam autem.Beatae non reiciendis aliquid perferendis necessitatibus quo sequi dolore, at animi nostrum eligendi esse et, hic, rem minus voluptas tenetur modi odit tempore ipsum facere!
     p
