--- a/src/index.pug
+++ b/src/index.pug
@@ -7,7 +7,9 @@ block content
     .welcome
         h1=title
         p.welcome__description=description
-        a.scroll-down(href="#continue") click to continue reading or scroll down
+        a.scroll-down(href="#continue")
+            span click to continue reading or scroll down
+            span.continue-arrow
     #continue
     p.lead Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, dolor! Quam dolorem beatae voluptates sequi sint modi corporis? Similique dicta quod accusamus sint distinctio at cum quisquam officia veniam autem.Beatae non reiciendis aliquid perferendis necessitatibus quo sequi dolore, at animi nostrum eligendi esse et, hic, rem minus voluptas tenetur modi odit tempore ipsum facere!
     p
