add grid for content, footer, welcome; add more style for menu

--- a/src/index.pug
+++ b/src/index.pug
@@ -10,8 +10,9 @@ block content
         a.scroll-down(href="#continue")
             span click to continue reading or scroll down
             span.continue-arrow
-    #continue
-    p.lead Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, dolor! Quam dolorem beatae voluptates sequi sint modi corporis? Similique dicta quod accusamus sint distinctio at cum quisquam officia veniam autem.Beatae non reiciendis aliquid perferendis necessitatibus quo sequi dolore, at animi nostrum eligendi esse et, hic, rem minus voluptas tenetur modi odit tempore ipsum facere!
-    p
-        small Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam et pariatur vero, fugiat quo eius sint dolores, voluptatibus reiciendis earum aliquid? Eius nihil optio maiores impedit minus cupiditate, earum similique.Quam exercitationem iure nisi in pariatur neque, rerum similique sit alias soluta eum voluptates omnis quo fugiat odio velit temporibus numquam magni? Consequuntur, laborum debitis blanditiis consectetur cupiditate ducimus tenetur?Reiciendis commodi quae fugit error architecto veritatis, eligendi mollitia aliquam voluptatem illum, reprehenderit explicabo, quis impedit cupiditate debitis eum non suscipit dolor ullam quod minima maiores. Sequi quos libero deleniti.
-        
+    .content
+        #continue
+        p.lead Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, dolor! Quam dolorem beatae voluptates sequi sint modi corporis? Similique dicta quod accusamus sint distinctio at cum quisquam officia veniam autem.Beatae non reiciendis aliquid perferendis necessitatibus quo sequi dolore, at animi nostrum eligendi esse et, hic, rem minus voluptas tenetur modi odit tempore ipsum facere!
+        p
+            small Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam et pariatur vero, fugiat quo eius sint dolores, voluptatibus reiciendis earum aliquid? Eius nihil optio maiores impedit minus cupiditate, earum similique.Quam exercitationem iure nisi in pariatur neque, rerum similique sit alias soluta eum voluptates omnis quo fugiat odio velit temporibus numquam magni? Consequuntur, laborum debitis blanditiis consectetur cupiditate ducimus tenetur?Reiciendis commodi quae fugit error architecto veritatis, eligendi mollitia aliquam voluptatem illum, reprehenderit explicabo, quis impedit cupiditate debitis eum non suscipit dolor ullam quod minima maiores. Sequi quos libero deleniti.
+
