--- a/src/index.pug
+++ b/src/index.pug
@@ -12,7 +12,16 @@ block content
             span.continue-arrow
     .content
         #continue
-        p.lead Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, dolor! Quam dolorem beatae voluptates sequi sint modi corporis? Similique dicta quod accusamus sint distinctio at cum quisquam officia veniam autem.Beatae non reiciendis aliquid perferendis necessitatibus quo sequi dolore, at animi nostrum eligendi esse et, hic, rem minus voluptas tenetur modi odit tempore ipsum facere!
         p
-            small Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam et pariatur vero, fugiat quo eius sint dolores, voluptatibus reiciendis earum aliquid? Eius nihil optio maiores impedit minus cupiditate, earum similique.Quam exercitationem iure nisi in pariatur neque, rerum similique sit alias soluta eum voluptates omnis quo fugiat odio velit temporibus numquam magni? Consequuntur, laborum debitis blanditiis consectetur cupiditate ducimus tenetur?Reiciendis commodi quae fugit error architecto veritatis, eligendi mollitia aliquam voluptatem illum, reprehenderit explicabo, quis impedit cupiditate debitis eum non suscipit dolor ullam quod minima maiores. Sequi quos libero deleniti.
-
+            | The sources of Quick Blog can be found on GitHub at
+            | #{" "}
+            a(href="https://github.com/biancalina") Quick Blog
+        blockquote.blockquote
+            .blockquote__body
+                p You don't have to be good to start
+            footer.blockquote-footer
+                a(href="http://bitbee.uk", target="_blank") Bianca Andrei
+        p.lead Lorem ipsum dolor sit amet consectetur iure nisi in pariatur neque, rerum similique sit alias soluta eum voluptates omnis quo fugiat odio velit temporibus numquam magni? Consequuntur, laborum debitis blanditiis consectetur cupiditate ducimus tenetur?Reiciendis commodi quae fugit error ar
+        p
+            small Lorem ipsum dolor sit amet consectetur iure nisi in pariatur neque, rerum similique sit alias soluta eum voluptates omnis quo fugiat odio velit temporibus numquam magni? Consequuntur, laborum debitis blanditiis consectetur cupiditate ducimus tenetur?Reiciendis commodi quae fugit error ar
+        a(href="#top") Top
