style the desktop version using display grid

--- a/src/index.pug
+++ b/src/index.pug
@@ -12,6 +12,7 @@ block content
             span.continue-arrow
     .content
         #continue
+        h2 Firstly, let's write some content
         p
             | The sources of Quick Blog can be found on GitHub at
             | #{" "}
@@ -19,9 +20,11 @@ block content
         blockquote.blockquote
             .blockquote__body
                 p You don't have to be good to start
-            footer.blockquote-footer
+            .blockquote-footer
                 a(href="http://bitbee.uk", target="_blank") Bianca Andrei
         p.lead Lorem ipsum dolor sit amet consectetur iure nisi in pariatur neque, rerum similique sit alias soluta eum voluptates omnis quo fugiat odio velit temporibus numquam magni? Consequuntur, laborum debitis blanditiis consectetur cupiditate ducimus tenetur?Reiciendis commodi quae fugit error ar
         p
             small Lorem ipsum dolor sit amet consectetur iure nisi in pariatur neque, rerum similique sit alias soluta eum voluptates omnis quo fugiat odio velit temporibus numquam magni? Consequuntur, laborum debitis blanditiis consectetur cupiditate ducimus tenetur?Reiciendis commodi quae fugit error ar
-        a(href="#top") Top
+        a.top(href="#top")
+            span Top
+            span.top-arrow
