--- a/src/_component/config/color.scss
+++ b/src/_component/config/color.scss
@@ -15,5 +15,6 @@ $color-dark: #000;
     $color-dark: #d35400;
 }
 
+$color-athens-gray: #e7e9ec;
 $color-golden-grass: #dd9a2d;
 $color-white: #fff;
