--- a/src/_component/layout/layout-mobile.scss
+++ b/src/_component/layout/layout-mobile.scss
@@ -1,6 +1,7 @@
 html,
 body {
     height: 100%;
+    font-family: 'Open Sans';
 }
 
 html {
@@ -8,11 +9,11 @@ html {
 }
 
 @media screen and (min-width: 25em){
-    html {font-size: calc( 16px + (24 - 16) * (100vw -400px) / (800 - 400))}
+    html { font-size: calc( 16px + (24 - 16) * (100vw -400px) / (800 - 400));}
 }
 
 .welcome {
-    height: 100%;
+    min-height: 100%;
     display: flex;
     flex-wrap: wrap;
     text-align: center;
@@ -24,6 +25,7 @@ html {
         color: $color-white;
         font-weight: bold;
         font-size: 4rem;
+        margin: 1rem;
     }
 
     .welcome__description {
@@ -44,7 +46,7 @@ html {
         border: 0.1rem solid $color-white;
         position: relative;
         background-color: $color-dark;
-        padding-right: 1.3rem;
+        padding-right: 1.5rem;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -53,21 +55,74 @@ html {
             border: 0.1rem solid $color-normal;
         }
     }
-
-    .continue-arrow {
-        margin: 0 0.2rem;
-        &:after {
-            position: absolute;
-            // right: 0.5rem;
-            // top: 1.2rem;
-            content: '';
-            display: block;
-            width: 0px;
-            height: 0px;
-            border-top: 0.4rem solid $color-white;
-            border-left: 0.4rem solid transparent;
-            border-right: 0.4rem solid transparent;
+}
+.continue-arrow {
+    margin: 0 0.2rem;
+    &:after {
+        position: absolute;
+        // right: 0.5rem;
+        // top: 1.2rem;
+        content: '';
+        display: block;
+        width: 0px;
+        height: 0px;
+        border-top: 0.4rem solid $color-white;
+        border-left: 0.4rem solid transparent;
+        border-right: 0.4rem solid transparent;
         }
+    }
+
+.top {
+    text-align: right;
+    display: block;
+}
+
+.top-arrow {
+    margin: 0 0.2rem;
+    position: relative;
+
+    &:after {
+        position: absolute;
+        // right: 0.5rem;
+        top: 0.5rem;
+        content: '';
+        // display: block;
+        width: 0px;
+        height: 0px;
+        border-bottom: 0.4rem solid $color-dark;
+        border-left: 0.4rem solid transparent;
+        border-right: 0.4rem solid transparent;
+    }
+}
+
+
+a {
+    color: $color-dark;
+}
+
+p {
+    line-height: 1.5;
+}
+
+.content {
+    padding: 1.5rem;
+
+    h2 {
+        font-size: 3rem;
+        color: $color-dark;
+        font-weight: bold;
+        padding: 1rem 0;
+        line-height: 1.3;
+    }
+
+    blockquote {
+        border-left: 0.1rem solid $color-athens-gray;
+        padding-left: 1 rem;
+        margin: 1rem 0;
+    }
+
+    .blockquote-footer {
+        margin: 0.5rem 0;
     }
 }
 
