--- a/src/_component/layout/layout-mobile.scss
+++ b/src/_component/layout/layout-mobile.scss
@@ -104,6 +104,15 @@ p {
     line-height: 1.5;
 }
 
+ol {
+    padding: 1rem 2rem;
+
+    li {
+        line-height: 1.3;
+        margin-bottom: 1rem;
+    }
+}
+
 .content {
     padding: 1.5rem;
 
