--- a/src/_component/menu/menu-tablet.scss
+++ b/src/_component/menu/menu-tablet.scss
@@ -1,15 +1,15 @@
-@media screen and (min-width: 768px) {
-    body {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        // grid-gap: 1rem;
-    }
+@media (min-width: 768px) {
+    // body {
+    //     display: grid;
+    //     grid-template-columns: 1fr 1fr;
+    //     // grid-gap: 1rem;
+    // }
 
-    .welcome,
-    footer,
-    .content {
-        grid-column: 1/3;
-    }
+    // .welcome,
+    // footer,
+    // .content {
+    //     grid-column: 1/3;
+    // }
 
     .menu__panel {
         margin: 0.5rem;
