--- a/src/_component/layout/base.pug
+++ b/src/_component/layout/base.pug
@@ -4,9 +4,11 @@ html
     head
         title=title
         meta(name="description", content=description)
-        link(rel="stylesheet", href=`${baseUrl}style.css`)
+        link(rel="stylesheet", href="/style.css")
         //- <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     body
-        block content
-        include ../menu/menu
-        include ../footer/footer
+        include ../welcome/welcome
+        .container
+            block content
+            include ../menu/menu
+            include ../footer/footer
