Create terms and update the content for privacy; rename contact.html and about.html

--- a/src/_component/menu/menu.pug
+++ b/src/_component/menu/menu.pug
@@ -5,9 +5,9 @@
         li
             a(href="/") Home
         li
-            a(href="/about.html") About
+            a(href="/about") About
         li
-            a(href="/contact.html") Contact
+            a(href="/contact") Contact
 
 .menu__panel
     h3.menu__title Categories
