--- a/src/contact/index.pug
+++ b/src/contact/index.pug
@@ -1,5 +1,7 @@
-extend _component/layout/base
-
+extend ../_component/layout/base
+    -
+        var title = 'Contact Quick Blog';
+        var description = 'Contact me';
 block content
     .content
         h2 Contact Information
