--- a/src/_component/layout/second.pug
+++ b/src/_component/layout/second.pug
@@ -7,5 +7,7 @@ html
         link(rel="stylesheet", href=`${baseUrl}style.css`)
         //- <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     body
-        block content
-        include ../footer/footer
+        include ../welcome/welcome
+        .container-second
+            block content
+            include ../footer/footer
