create article component. And create Html and css section and add content

--- a/src/contact/index.pug
+++ b/src/contact/index.pug
@@ -1,7 +1,8 @@
 extend ../_component/layout/base
+block config
     -
-        var title = 'Contact Quick Blog';
-        var description = 'Contact me';
+        var title = 'Contact Quick Blog'
+        var description = 'Contact me, the creator, Bianca Andrei'
 block content
     .content
         h2 Contact Information
