--- a/src/_component/footer/footer.scss
+++ b/src/_component/footer/footer.scss
@@ -14,6 +14,9 @@ footer {
 .footer__list {
     display: flex;
     justify-content: space-around;
+    li {
+        list-style-type: none;
+    }
 }
 
 .footer__link {
