--- a/src/_component/layout/layout-mobile.scss
+++ b/src/_component/layout/layout-mobile.scss
@@ -9,7 +9,7 @@ html {
 }
 
 @media screen and (min-width: 25em){
-    html { font-size: calc( 16px + (24 - 16) * (100vw -400px) / (800 - 400));}
+    html { font-size: calc( 16px + (24 - 16) * (100vw -400px) / (800 - 400) );}
 }
 
 .welcome {
@@ -24,29 +24,29 @@ html {
     h1 {
         color: $color-white;
         font-weight: bold;
-        font-size: 4rem;
+        // font-size: 4rem;
         margin: 1rem;
     }
 
     .welcome__description {
         line-height: 1.5;
         padding: 0 0.5rem;
-        font-size: 2rem;
+        font-size: 1.9rem;
         text-align: justify;
-        padding: 2rem;
+        // padding: 2rem;
     }
 
     a.scroll-down {
         color: $color-white;
         text-decoration: none;
         font-size: 1rem;
-        padding: 1rem;
+        padding: 0.4rem 1rem;
         border-radius: 0.3rem;
         margin: 1rem;
         border: 0.1rem solid $color-white;
         position: relative;
         background-color: $color-dark;
-        padding-right: 1.5rem;
+        padding-right: 1.3rem;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -55,7 +55,7 @@ html {
             border: 0.1rem solid $color-normal;
         }
     }
-}
+
 .continue-arrow {
     margin: 0 0.2rem;
     &:after {
@@ -71,6 +71,7 @@ html {
         border-right: 0.4rem solid transparent;
         }
     }
+}
 
 .top {
     text-align: right;
@@ -102,6 +103,7 @@ a {
 
 p {
     line-height: 1.5;
+    margin: 0 2rem;
 }
 
 .container {
@@ -109,11 +111,11 @@ p {
         list-style-type: disc;
     }
     ol, ul {
-          padding: 1rem 2rem;
+        padding: 1rem 2rem;
 
         li {
-            line-height: 1.3;
-            margin-bottom: 1rem;
+        line-height: 1.3;
+        margin-bottom: 1rem;
         }
     }
 }
@@ -122,11 +124,12 @@ p {
     padding: 1.5rem;
 
     h2 {
-        font-size: 3rem;
+        font-size: 2.5rem;
         color: $color-dark;
         font-weight: bold;
         padding: 1rem 0;
         line-height: 1.3;
+        text-align: initial;
     }
 
     blockquote {
@@ -135,8 +138,8 @@ p {
         margin: 1rem 0;
     }
 
-    .blockquote-footer {
-        margin: 0.5rem 0;
-    }
+    // // .blockquote-footer {
+    // //     margin: 0.5rem 0;
+    // }
 }
 
