--- a/src/_component/layout/layout-mobile.scss
+++ b/src/_component/layout/layout-mobile.scss
@@ -1,6 +1,6 @@
 html,
 body {
-    height: 100%;
+    min-height: 100%;
     font-family: 'Open Sans';
 }
 
@@ -13,7 +13,7 @@ html {
 }
 
 .welcome {
-    min-height: 100%;
+    height: 100%;
     display: flex;
     flex-wrap: wrap;
     text-align: center;
@@ -24,7 +24,7 @@ html {
     h1 {
         color: $color-white;
         font-weight: bold;
-        // font-size: 4rem;
+        font-size: 4rem;
         margin: 1rem;
     }
 
@@ -33,20 +33,20 @@ html {
         padding: 0 0.5rem;
         font-size: 1.9rem;
         text-align: justify;
-        // padding: 2rem;
+        padding: 2rem;
     }
 
     a.scroll-down {
         color: $color-white;
         text-decoration: none;
         font-size: 1rem;
-        padding: 0.4rem 1rem;
+        padding: 1rem;
         border-radius: 0.3rem;
         margin: 1rem;
         border: 0.1rem solid $color-white;
         position: relative;
         background-color: $color-dark;
-        padding-right: 1.3rem;
+        padding-right: 1.5rem;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -55,6 +55,24 @@ html {
             border: 0.1rem solid $color-normal;
         }
     }
+}
+b {
+    font-weight: bold;
+}
+
+.container {
+    ul {
+        list-style-type: disc;
+    }
+    ol, ul {
+        padding: 1rem 2rem;
+
+        li {
+        line-height: 1.3;
+        margin-bottom: 1rem;
+        }
+    }
+}
 
 .continue-arrow {
     margin: 0 0.2rem;
@@ -71,7 +89,7 @@ html {
         border-right: 0.4rem solid transparent;
         }
     }
-}
+
 
 .top {
     text-align: right;
@@ -103,22 +121,8 @@ a {
 
 p {
     line-height: 1.5;
-    margin: 0 2rem;
 }
 
-.container {
-    ul {
-        list-style-type: disc;
-    }
-    ol, ul {
-        padding: 1rem 2rem;
-
-        li {
-        line-height: 1.3;
-        margin-bottom: 1rem;
-        }
-    }
-}
 
 .content {
     padding: 1.5rem;
@@ -129,7 +133,6 @@ p {
         font-weight: bold;
         padding: 1rem 0;
         line-height: 1.3;
-        text-align: initial;
     }
 
     blockquote {
