--- a/src/_article/template.pug
+++ b/src/_article/template.pug
@@ -1,45 +1,25 @@
-extend ../_component/layout/base
+extends _component/layout/base
 
 block config
     -
-        var title = template.head.title || 'Change me, title'
-        var description = template.head.description || `change me, I'm description`
-block content 
+        var title = 'Welcome to Quick Blog'
+        var description = 'Using super Quick Blog is easy and you can get 100/100 score on Google pagespeed insights'
+block content
     .content
-        each something in template.body
-            if something.type === 'blockquote'
-                blockquote.blockquote
-                    .blockquote__body
-                        each paragraph in something.data
-                            p=paragraph
-                    .blockquote-footer
-                        a(href=something.link, target="_blank")=something.source
-
-            if something.type == 'pre'
-                h3.pre-title=something.title              
-                each dataValue in something.data
-                    pre=dataValue
-
-
-            if something.type == 'ul'
-                ul
-                    each listItem in something.data
-                        li=listItem
-
-            if something.type == 'h3'
-                h3=something.data
-
-            if something.type == "h2"
-                h2=something.data
-            if something.type == "paragraph" || something.type == "p"
-                each paragraph in something.data
-                    p=paragraph
-            if something.type == "paragraph-safe"
-                each paragraph in something.data
-                    p!=paragraph
-
-            if something.type == 'hr'
-                hr
-            if something.type == 'img'
-                img(src=something.src)
-            //- pre=JSON.stringify(template.body, null, 2)
+        #continue
+        h2 Firstly, let's write some content
+        p 
+            |The sources of Quick Blog can be found on Github at 
+            | #{" "}
+            a(href="https://github.com/biancalina/quick-blog") Quick Blog
+        blockquote.blockquote
+            .blockquote__body
+                p You don't have to be good to start, you have to start to be good.
+            .blockquoate-footer
+                a(href="https://github.com/robertoalx", target="_blank") Bianca Andrei
+        p.lead Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus
+        p
+            small Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus aucotr fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligua, eget lacinia odio sem nec elit.
+        a.top(href="#Top") 
+            span Top
+            span.top-arrow
