--- a/src/_component/layout/base.pug
+++ b/src/_component/layout/base.pug
@@ -5,7 +5,7 @@ html
         title=title
         meta(name="description", content=description)
         link(rel="stylesheet", href="/style.css")
-        //- <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+        //- link(href="https://fonts.googleapis.com/css?family=Open+Sans", rel="stylesheet")
     body
         include ../welcome/welcome
         .container
