--- a/src/_component/layout/layout-mobile.scss
+++ b/src/_component/layout/layout-mobile.scss
@@ -13,7 +13,7 @@ html {
 }
 
 .welcome {
-    height: 100%;
+    min-height: 100%;
     display: flex;
     flex-wrap: wrap;
     text-align: center;
