--- a/src/_component/footer/footer.pug
+++ b/src/_component/footer/footer.pug
@@ -3,6 +3,6 @@ footer
         div &copy; 2019 - #{new Date().getFullYear()} #{data.site.company}
         ul.footer__list
             li
-                a.footer__link(href="/privacy") Privacy
+                a(href=`${baseUrl}privacy`) Privacy
             li
-                a.footer__link(href="/terms") Terms
+                a(href=`${baseUrl}terms`) Terms
