--- a/src/_component/layout/second.pug
+++ b/src/_component/layout/second.pug
@@ -4,7 +4,7 @@ html
     head
         title=title
         meta(name="description", content=description)
-        link(rel="stylesheet", href="/style.css")
+        link(rel="stylesheet", type="text/css", href=`${baseUrl}style.css`)
         //- <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     body
         include ../welcome/welcome
