--- a/src/_component/layout/layout-mobile.scss
+++ b/src/_component/layout/layout-mobile.scss
@@ -4,14 +4,10 @@ body {
     font-family: 'Open Sans';
 }
 
-html {
-    // font-size: 10px;
-}
 
 @media screen and (min-width: 25em){
     html { font-size: calc( 16px + (24 - 16) * (100vw -400px) / (800 - 400) );}
 }
-
 .welcome {
     min-height: 100%;
     display: flex;
@@ -20,10 +16,10 @@ html {
     align-items: center;
     justify-content: center;
     background-image: radial-gradient(ellipse, $color-normal, $color-dark);
-
     h1 {
         color: $color-white;
         font-weight: bold;
+        font-size: 4rem;
         font-size: 2rem;
         margin: 1rem;
     }
@@ -31,14 +27,18 @@ html {
     .welcome__description {
         line-height: 1.5;
         padding: 0 0.5rem;
+        font-size: 1.9rem;
         font-size: 0.8rem;
         text-align: justify;
+        padding: 2rem;
         padding: 1rem;
     }
 
     a.scroll-down {
         color: $color-white;
         text-decoration: none;
+        font-size: 1rem;
+        padding: 1rem;
         font-size: 0.8rem;
         padding: 0.5rem;
         border-radius: 0.3rem;
@@ -59,21 +59,18 @@ html {
 b {
     font-weight: bold;
 }
-
 .container {
     ul {
         list-style-type: disc;
     }
     ol, ul {
         padding: 1rem 2rem;
-
         li {
         line-height: 1.3;
         margin-bottom: 1rem;
         }
     }
 }
-
 .continue-arrow {
     margin: 0 0.2rem;
     &:after {
@@ -89,17 +86,13 @@ b {
         border-right: 0.4rem solid transparent;
         }
     }
-
-
 .top {
     text-align: right;
     display: block;
 }
-
 .top-arrow {
     margin: 0 0.2rem;
     position: relative;
-
     &:after {
         position: absolute;
         // right: 0.5rem;
@@ -113,13 +106,12 @@ b {
         border-right: 0.4rem solid transparent;
     }
 }
-
-
 a {
     color: $color-dark;
 }
 
 p {
+    line-height: 1.5;
     font-size: 0.6rem;
     line-height: 1.2;
 }
@@ -129,10 +121,12 @@ p {
     padding: 1.5rem;
 
     h2 {
+        font-size: 2.5rem;
         font-size: 1.2rem;
         color: $color-dark;
         font-weight: bold;
         padding: 1rem 0;
+        line-height: 1.3;
         line-height: 1;
     }
 
@@ -141,9 +135,7 @@ p {
         padding-left: 1 rem;
         margin: 1rem 0;
     }
-
-    // // .blockquote-footer {
-    // //     margin: 0.5rem 0;
-    // }
+    .blockquote-footer {
+        margin: 0.5rem 0;
+    }
 }
-
